# todayiwill

./: .gitignore  Dockerfile  Makefile  PKGBUILD  README.md  app.rb  dev-setup.sh  install-linux-debian.sh  todayiwill.rb  uninstall-linux-debian.sh
.github/workflows/: ci.yml  dev-env.yml  release.yml
todayiwill/: Cargo.toml
todayiwill/src/: appointment.rs  lib.rs  main.rs  pkg.rs
todayiwill/src/appointment/: add.rs  clear.rs  helper.rs  list.rs  time.rs
todayiwill/tests/: cli.rs
todayiwill/tests/common/: mod.rs
