[package]
name = "todayiwill"
version = "0.0.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.14"
cargo-llvm-cov = "0.6.10"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
curl = "0.4.46"
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serial_test = "3.1.1"
